--- a/css/styles.css
+++ b/css/styles.css
@@ -20,44 +20,42 @@ h2 {
 
 .navbar {
   display: inline-block;
+  margin: auto 0;
+  width: 100%;
 }
 
-.logo {
+/* .logo {
   float: left;
   width: 3%;
   margin-right: 20px;
-}
+} */
 
 #searchBar {
-  width: 40%;
+  margin: 0 auto;
+  width: 30%;
   padding: 5px 10px;
   font-size: 1rem;
   border: 1px solid #a1a1a1;
 }
 
-.submitButton {
+.help-icon {
   background-color: #eeeeee;
-  padding: 5px 10px;
+  width: 20px; 
+  padding: 2px 0px;
   border: 1px solid #a1a1a1;
 }
 
-.help-icon {
-  background-color: #eeeeee;
-  width: 2%;
-  padding: 2px 0px;
-  border: 1px solid #a1a1a1;
+.resultstitle {
+  margin-top: -40px;
 }
 
 /* SEARCH RESULTS */
 
 .searchresults {
-  margin: 100px auto;
-  width: 60%;
+  margin: 100px 30px 0 0;
+  float: right;
+  width: 70%;
   border: 1px solid #a1a1a1;
-}
-
-.searchresults > h2 {
-  margin-top: -40px;
 }
 
 .results {
@@ -112,7 +110,7 @@ h2 {
   margin: auto 0;
   grid-area: info;
   display: inline;
-  margin-left: 85px;
+  margin-left: 100px;
   text-align: left;
 }
 
@@ -131,8 +129,39 @@ h2 {
 .painting > #checkbox {
   margin: auto auto;
   grid-area: checkbox;
-  width: 40px;
-  height: 40px;
 }
 
 /* COMPARE PANEL */
+
+.compareresults {
+  margin: 100px 0 0 30px;
+  float: left;
+  width: 20%;
+  border: 1px solid #a1a1a1;
+}
+
+.compare {
+  margin: 0 20px;
+  border: 1px solid #a1a1a1;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-areas: 
+      'image info buttons';
+}
+
+#compareList {
+  margin: 0 0 10px;
+  display: grid;
+  grid-area: painting;
+  grid-template-columns: 100%;
+  grid-gap: 10px;
+  padding: 0;
+}
+
+.comparebutton {
+  background-color: #eeeeee;
+  margin: 10px auto;
+  padding: 5px 10px;
+  font-size: 0.8rem;
+  border: 1px solid #a1a1a1;
+}
