--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ h2 {
 .compareresults {
   margin: 100px 0 0 50px;
   float: left;
-  width: 20%;
+  width: 15%;
   border: 1px solid #a1a1a1;
 }
 
@@ -195,3 +195,16 @@ h2 {
 .tooltip {
   fill: #333333;
 }
+
+.radarchart {
+  display: inline-block;
+}
+
+.radarChart {
+  display: inline-block;
+}
+
+.paintingsidebar {
+  display: inline-block;
+}
+
