--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -135,7 +135,7 @@ h2 {
   height: 60px;
 }
 
-.painting > #checkbox {
+.painting > .checkbox {
   margin: auto auto;
   grid-area: checkbox;
 }
@@ -145,26 +145,39 @@ h2 {
 .compareresults {
   margin: 100px 0 0 50px;
   float: left;
-  width: 15%;
+  width: 22%;
   border: 1px solid #a1a1a1;
-}
-
-.compare {
-  margin: 0 20px;
-  border: 1px solid #a1a1a1;
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-areas: 
-      'image info buttons';
 }
 
 #compareList {
-  margin: 0 0 10px;
+  margin: 0 10px 10px;
   display: grid;
   grid-area: painting;
   grid-template-columns: 100%;
   grid-gap: 10px;
   padding: 0;
+}
+
+.compares {
+  list-style-type: none;
+  border: 1px solid #a1a1a1;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-areas: 
+      'info checkbox';
+}
+
+.info {
+  margin: auto 0;
+  grid-area: info;
+  display: inline;
+  margin-left: 100px;
+  text-align: left;
+}
+
+.checkbox {
+  margin: auto auto;
+  grid-area: checkbox;
 }
 
 .comparebutton {
